@@ -9,7 +9,6 @@ import uk.gov.hmcts.reform.prl.models.dto.cafcass.Element;
 import uk.gov.hmcts.reform.prl.services.cafcass.PostcodeLookupService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -59,8 +58,7 @@ public class CafCassFilter {
      */
     public <T> List<Element<T>>  filterNonValueList(List<Element<T>> object) {
         if (object != null && !object.isEmpty()) {
-            return object.stream().filter(element -> element.getValue() != null).collect(
-                Collectors.toList());
+            return object.stream().filter(element -> element.getValue() != null).toList();
         }
 
         return null;
